somewhat functional poc

--- a/data_wrangling.ipynb
+++ b/data_wrangling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "cfeea1bc",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "3754bb48",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "c4c7992f",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "393ecead",
    "metadata": {},
    "outputs": [],
@@ -105,6 +105,26 @@
     "jobs = read_csv_required(FILES[\"jobs\"])\n",
     "applications_tmpl = read_csv_required(FILES[\"applications_template\"])\n",
     "users_tmpl = read_csv_required(FILES[\"users_template\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "51fdf97d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "962\n",
+      "223\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(candidates))\n",
+    "print(len(jobs))"
    ]
   },
   {
