Update app - add details

--- a/tests/extract_data_tests.ipynb
+++ b/tests/extract_data_tests.ipynb
@@ -398,6 +398,297 @@
     "data = pd.read_csv(\"../Data/raw_data_cvs.csv\")  # must have 'Resume' column\n",
     "process_resumes_to_csv(data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f1102b09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching 4 files: 100%|██████████| 4/4 [00:00<00:00, 2772.64it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import re\n",
+    "import random\n",
+    "from datetime import datetime, timedelta\n",
+    "from gliner import GLiNER\n",
+    "\n",
+    "# ✅ Use a custom cache folder to avoid Windows permission issues\n",
+    "os.environ[\"HF_HOME\"] = os.path.join(os.getcwd(), \"hf_cache\")\n",
+    "\n",
+    "# Load GLiNER model\n",
+    "model = GLiNER.from_pretrained(\"urchade/gliner_small-v2.1\")\n",
+    "\n",
+    "def calculate_yoe(text):\n",
+    "    matches = re.findall(r'(\\d+)\\s*(?:\\+?\\s*)?(?:years?|yrs?)', text, flags=re.IGNORECASE)\n",
+    "    years = [int(m) for m in matches]\n",
+    "    return max(years) if years else 0\n",
+    "\n",
+    "def infer_seniority(yoe):\n",
+    "    if yoe < 2:\n",
+    "        return \"Junior\"\n",
+    "    elif yoe < 5:\n",
+    "        return \"Mid-level\"\n",
+    "    elif yoe < 10:\n",
+    "        return \"Senior\"\n",
+    "    else:\n",
+    "        return \"Lead/Principal\"\n",
+    "\n",
+    "def extract_about(text):\n",
+    "    about = re.sub(r'\\s+', ' ', text.strip())\n",
+    "    return about[:500] + (\"...\" if len(about) > 500 else \"\")\n",
+    "\n",
+    "def extract_employment_type(text):\n",
+    "    types = [\"full-time\", \"part-time\", \"contract\", \"internship\", \"freelance\", \"temporary\"]\n",
+    "    for t in types:\n",
+    "        if re.search(t, text, re.IGNORECASE):\n",
+    "            return t.capitalize()\n",
+    "    return \"\"\n",
+    "\n",
+    "def random_created_at():\n",
+    "    start = datetime.now() - timedelta(days=365*2)\n",
+    "    end = datetime.now()\n",
+    "    return (start + (end - start) * random.random()).isoformat()\n",
+    "\n",
+    "def extract_with_gliner(text):\n",
+    "    labels = [\"skill\", \"education\", \"location\", \"job_title\"]\n",
+    "    predictions = model.predict_entities(text, labels, threshold=0.5)\n",
+    "\n",
+    "    result = {\"skills\": [], \"location\": None, \"education\": None, \"title\": None}\n",
+    "    for ent in predictions:\n",
+    "        label = ent[\"label\"]\n",
+    "        if label == \"skill\":\n",
+    "            result[\"skills\"].append(ent[\"text\"])\n",
+    "        elif label == \"location\" and result[\"location\"] is None:\n",
+    "            result[\"location\"] = ent[\"text\"]\n",
+    "        elif label == \"education\" and result[\"education\"] is None:\n",
+    "            result[\"education\"] = ent[\"text\"]\n",
+    "        elif label == \"job_title\" and result[\"title\"] is None:\n",
+    "            result[\"title\"] = ent[\"text\"]\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "def extract_cv_fields(cv_text, name, email):\n",
+    "    gliner_data = extract_with_gliner(cv_text)\n",
+    "\n",
+    "    location = gliner_data.get(\"location\") or \"NA\"\n",
+    "    title = gliner_data.get(\"title\") or \"\"\n",
+    "    created_at = random_created_at()\n",
+    "    yoe = calculate_yoe(cv_text)\n",
+    "    seniority = infer_seniority(yoe)\n",
+    "    about = extract_about(cv_text)\n",
+    "    emp_type = extract_employment_type(cv_text)\n",
+    "    skills = \", \".join(sorted(set(gliner_data.get(\"skills\", []))))\n",
+    "\n",
+    "    return {\n",
+    "        \"candidate_email\": email,\n",
+    "        \"full_name\": name,\n",
+    "        \"candidate_title\": title,\n",
+    "        \"about\": about,\n",
+    "        \"skills\": skills,\n",
+    "        \"location\": location,\n",
+    "        \"preferred_employment_type\": emp_type,\n",
+    "        \"yoe\": yoe,\n",
+    "        \"seniority\": seniority,\n",
+    "        \"created_at\": created_at\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ceaa68e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Asking to truncate to max_length but no maximum length is provided and the model has no predefined maximum length. Default to no truncation.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'candidate_email': 'fefi',\n",
+       " 'full_name': 'fefi',\n",
+       " 'candidate_title': 'Data Science Assurance Associate',\n",
+       " 'about': 'Data Science,\"Skills * Programming Languages: Python (pandas, numpy, scipy, scikit-learn, matplotlib), Sql, Java, JavaScript/JQuery. * Machine learning: Regression, SVM, NaÃ¯ve Bayes, KNN, Random Forest, Decision Trees, Boosting techniques, Cluster Analysis, Word Embedding, Sentiment Analysis, Natural Language processing, Dimensionality reduction, Topic Modelling (LDA, NMF), PCA & Neural Nets. * Database Visualizations: Mysql, SqlServer, Cassandra, Hbase, ElasticSearch D3.js, DC.js, Plotly, kiba...',\n",
+       " 'skills': '',\n",
+       " 'location': 'NA',\n",
+       " 'preferred_employment_type': '',\n",
+       " 'yoe': 0,\n",
+       " 'seniority': 'Junior',\n",
+       " 'created_at': '2024-12-09T14:07:31.357862'}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = \"\"\"Data Science,\"Skills * Programming Languages: Python (pandas, numpy, scipy, scikit-learn, matplotlib), Sql, Java, JavaScript/JQuery. * Machine learning: Regression, SVM, NaÃ¯ve Bayes, KNN, Random Forest, Decision Trees, Boosting techniques, Cluster Analysis, Word Embedding, Sentiment Analysis, Natural Language processing, Dimensionality reduction, Topic Modelling (LDA, NMF), PCA & Neural Nets. * Database Visualizations: Mysql, SqlServer, Cassandra, Hbase, ElasticSearch D3.js, DC.js, Plotly, kibana, matplotlib, ggplot, Tableau. * Others: Regular Expression, HTML, CSS, Angular 6, Logstash, Kafka, Python Flask, Git, Docker, computer vision - Open CV and understanding of Deep learning.Education Details \n",
+    "\n",
+    "Data Science Assurance Associate \n",
+    "\n",
+    "Data Science Assurance Associate - Ernst & Young LLP\n",
+    "Skill Details \n",
+    "JAVASCRIPT- Exprience - 24 months\n",
+    "jQuery- Exprience - 24 months\n",
+    "Python- Exprience - 24 monthsCompany Details \n",
+    "company - Ernst & Young LLP\n",
+    "description - Fraud Investigations and Dispute Services   Assurance\n",
+    "TECHNOLOGY ASSISTED REVIEW\n",
+    "TAR (Technology Assisted Review) assists in accelerating the review process and run analytics and generate reports.\n",
+    "* Core member of a team helped in developing automated review platform tool from scratch for assisting E discovery domain, this tool implements predictive coding and topic modelling by automating reviews, resulting in reduced labor costs and time spent during the lawyers review.\n",
+    "* Understand the end to end flow of the solution, doing research and development for classification models, predictive analysis and mining of the information present in text data. Worked on analyzing the outputs and precision monitoring for the entire tool.\n",
+    "* TAR assists in predictive coding, topic modelling from the evidence by following EY standards. Developed the classifier models in order to identify \"\"red flags\"\" and fraud-related issues.\n",
+    "\n",
+    "Tools & Technologies: Python, scikit-learn, tfidf, word2vec, doc2vec, cosine similarity, NaÃ¯ve Bayes, LDA, NMF for topic modelling, Vader and text blob for sentiment analysis. Matplot lib, Tableau dashboard for reporting.\n",
+    "\n",
+    "MULTIPLE DATA SCIENCE AND ANALYTIC PROJECTS (USA CLIENTS)\n",
+    "TEXT ANALYTICS - MOTOR VEHICLE CUSTOMER REVIEW DATA * Received customer feedback survey data for past one year. Performed sentiment (Positive, Negative & Neutral) and time series analysis on customer comments across all 4 categories.\n",
+    "* Created heat map of terms by survey category based on frequency of words * Extracted Positive and Negative words across all the Survey categories and plotted Word cloud.\n",
+    "* Created customized tableau dashboards for effective reporting and visualizations.\n",
+    "CHATBOT * Developed a user friendly chatbot for one of our Products which handle simple questions about hours of operation, reservation options and so on.\n",
+    "* This chat bot serves entire product related questions. Giving overview of tool via QA platform and also give recommendation responses so that user question to build chain of relevant answer.\n",
+    "* This too has intelligence to build the pipeline of questions as per user requirement and asks the relevant /recommended questions.\n",
+    "\n",
+    "Tools & Technologies: Python, Natural language processing, NLTK, spacy, topic modelling, Sentiment analysis, Word Embedding, scikit-learn, JavaScript/JQuery, SqlServer\n",
+    "\n",
+    "INFORMATION GOVERNANCE\n",
+    "Organizations to make informed decisions about all of the information they store. The integrated Information Governance portfolio synthesizes intelligence across unstructured data sources and facilitates action to ensure organizations are best positioned to counter information risk.\n",
+    "* Scan data from multiple sources of formats and parse different file formats, extract Meta data information, push results for indexing elastic search and created customized, interactive dashboards using kibana.\n",
+    "* Preforming ROT Analysis on the data which give information of data which helps identify content that is either Redundant, Outdated, or Trivial.\n",
+    "* Preforming full-text search analysis on elastic search with predefined methods which can tag as (PII) personally identifiable information (social security numbers, addresses, names, etc.) which frequently targeted during cyber-attacks.\n",
+    "Tools & Technologies: Python, Flask, Elastic Search, Kibana\n",
+    "\n",
+    "FRAUD ANALYTIC PLATFORM\n",
+    "Fraud Analytics and investigative platform to review all red flag cases.\n",
+    "â¢ FAP is a Fraud Analytics and investigative platform with inbuilt case manager and suite of Analytics for various ERP systems.\n",
+    "* It can be used by clients to interrogate their Accounting systems for identifying the anomalies which can be indicators of fraud by running advanced analytics\n",
+    "Tools & Technologies: HTML, JavaScript, SqlServer, JQuery, CSS, Bootstrap, Node.js, D3.js, DC.js\"\n",
+    "Data Science,\"Education Details \n",
+    "May 2013 to May 2017 B.E   UIT-RGPV\"\"\"\n",
+    "\n",
+    "extract_cv_fields(text,'fefi', 'fefi')\n",
+    "# extract_with_gliner(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "947186f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching 4 files: 100%|██████████| 4/4 [00:00<?, ?it/s]\n",
+      "c:\\Users\\k513eq\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\transformers\\convert_slow_tokenizer.py:558: UserWarning: The sentencepiece tokenizer that you are converting to a fast tokenizer uses the byte fallback option which is not implemented in the fast tokenizers. In practice this means that the fast version of the tokenizer can produce unknown tokens whereas the sentencepiece version would have converted these unknown tokens into a sequence of byte tokens matching the original piece of text.\n",
+      "  warnings.warn(\n",
+      "Asking to truncate to max_length but no maximum length is provided and the model has no predefined maximum length. Default to no truncation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'start': 0, 'end': 10, 'text': 'John Smith', 'label': 'full_name', 'score': 0.895350456237793}, {'start': 16, 'end': 39, 'text': 'Senior Python Developer', 'label': 'skill', 'score': 0.5687909126281738}, {'start': 49, 'end': 55, 'text': 'Berlin', 'label': 'location', 'score': 0.9687982201576233}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from gliner import GLiNER\n",
+    "\n",
+    "model = GLiNER.from_pretrained(\"urchade/gliner_small-v2.1\")\n",
+    "\n",
+    "text = \"John Smith is a Senior Python Developer based in Berlin. He knows Django, React, and AWS.\"\n",
+    "\n",
+    "labels = [\"full_name\", \"job_title\", \"location\", \"skill\"]\n",
+    "\n",
+    "entities = model.predict_entities(text, labels, threshold=0.5)\n",
+    "print(entities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
